7 step (#16)
* 7 step - schema.sql updated, UrlCheck added

* 7 step - UrlCheckRepository added

* Step 7. continue developing

* Step 7. it works!

* Step 7. it works but not tests

* Step 7. looks like done